# stm32-base

./: .travis.yml  CMakeLists.txt  README.md  stm32f4.ld.in
drivers/BSP/: bsp.cmake
drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_lcd.c
drivers/BSP/STM32756G_EVAL/: stm32756g_eval_audio.h  stm32756g_eval_eeprom.c  stm32756g_eval_lcd.c  stm32756g_eval_nor.c  stm32756g_eval_qspi.c  stm32756g_eval_sd.h  stm32756g_eval_sdram.c  stm32756g_eval_sdram.h  stm32756g_eval_ts.h
drivers/BSP/STM32F429I-Discovery/: stm32f429i_discovery_lcd.h
drivers/BSP/STM32F746G-Discovery/: stm32746g_discovery_audio.h  stm32746g_discovery_camera.h  stm32746g_discovery_qspi.h
drivers/BSP/STM32F756G_EVAL/: Release_Notes.html  stm32756g_eval.c  stm32756g_eval.h  stm32756g_eval_audio.c  stm32756g_eval_camera.c  stm32756g_eval_camera.h  stm32756g_eval_eeprom.h  stm32756g_eval_io.c  stm32756g_eval_io.h  stm32756g_eval_lcd.h  stm32756g_eval_nor.h  stm32756g_eval_qspi.h  stm32756g_eval_sd.c  stm32756g_eval_sram.c  stm32756g_eval_sram.h  stm32756g_eval_ts.c
drivers/BSP/STM32F769I-Discovery/: Release_Notes.html  stm32f769i_discovery.c  stm32f769i_discovery.h  stm32f769i_discovery_audio.c  stm32f769i_discovery_audio.h  stm32f769i_discovery_eeprom.c  stm32f769i_discovery_eeprom.h  stm32f769i_discovery_lcd.c  stm32f769i_discovery_lcd.h  stm32f769i_discovery_qspi.c  stm32f769i_discovery_qspi.h  stm32f769i_discovery_sd.c  stm32f769i_discovery_sd.h  stm32f769i_discovery_sdram.c  stm32f769i_discovery_sdram.h  stm32f769i_discovery_ts.c  stm32f769i_discovery_ts.h
drivers/BSP/STM32F769I_EVAL/: Release_Notes.html  stm32f769i_eval.c  stm32f769i_eval.h  stm32f769i_eval_audio.c  stm32f769i_eval_audio.h  stm32f769i_eval_camera.c  stm32f769i_eval_camera.h  stm32f769i_eval_eeprom.c  stm32f769i_eval_eeprom.h  stm32f769i_eval_io.c  stm32f769i_eval_io.h  stm32f769i_eval_lcd.c  stm32f769i_eval_lcd.h  stm32f769i_eval_nor.c  stm32f769i_eval_nor.h  stm32f769i_eval_qspi.c  stm32f769i_eval_qspi.h  stm32f769i_eval_sd.c  stm32f769i_eval_sd.h  stm32f769i_eval_sdram.c  stm32f769i_eval_sdram.h  stm32f769i_eval_sram.c  stm32f769i_eval_sram.h  stm32f769i_eval_ts.c  stm32f769i_eval_ts.h
drivers/BSP/STM32L100C-Discovery/: Release_Notes.html  stm32l100c_discovery.c  stm32l100c_discovery.h
drivers/BSP/STM32L152C-Discovery/: Release_Notes.html  stm32l152c_discovery.c  stm32l152c_discovery.h  stm32l152c_discovery_glass_lcd.c  stm32l152c_discovery_glass_lcd.h
drivers/BSP/STM32L152D_EVAL/: Release_Notes.html  stm32l152d_eval.c  stm32l152d_eval.h  stm32l152d_eval_audio.c  stm32l152d_eval_audio.h  stm32l152d_eval_eeprom.c  stm32l152d_eval_eeprom.h  stm32l152d_eval_glass_lcd.c  stm32l152d_eval_glass_lcd.h  stm32l152d_eval_lcd.c  stm32l152d_eval_lcd.h  stm32l152d_eval_nor.c  stm32l152d_eval_nor.h  stm32l152d_eval_sd.c  stm32l152d_eval_sd.h  stm32l152d_eval_sram.c  stm32l152d_eval_sram.h  stm32l152d_eval_tsensor.c  stm32l152d_eval_tsensor.h
drivers/CMSIS/: cmsis.cmake
drivers/HAL/: hal.cmake
drivers/STM32F4xx_HAL_Driver/: hal.cmake
example/: example.cmake
examples/stm32f429i-disco/: CMakeLists.txt
examples/stm32f746g-disco/: CMakeLists.txt
examples/stm32f746g-disco/include/: fatfs_storage.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
examples/stm32f746g-disco/source/: fatfs_storage.c  main.c  (+1 more)
middlewares/: middlewares.cmake
source/: main.cpp
toolchain/: arm-gcc.cmake  post-build.cmake  stlink.cmake  stm32-base.cmake
